// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppShell visual regression > matches the shell snapshot in dark theme 1`] = `
<div>
  <div
    class="MuiBox-root css-ogmp5q"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ra1c3-MuiTypography-root-MuiLink-root"
      data-testid="skip-to-content"
      href="#main-content"
    >
      Skip to main content
    </a>
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorInherit MuiAppBar-positionFixed mui-fixed css-16zxc7a-MuiPaper-root-MuiAppBar-root"
      style="--Paper-shadow: var(--mui-shadows-0); --Paper-overlay: var(--mui-overlays-0);"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1bmc26r-MuiToolbar-root"
      >
        <a
          aria-label="kbeatz"
          class="MuiBox-root css-5k1n1y"
          data-discover="true"
          href="/"
        >
          <img
            alt=""
            class="MuiBox-root css-1n45nsz"
            src="/src/assets/kbeatz-logo-dark.svg"
          />
        </a>
        <button
          aria-controls="app-mobile-drawer"
          aria-expanded="false"
          aria-label="Open navigation menu"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeLarge css-k7b2b2-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
            data-testid="MenuIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3zm0-5h18v-2H3zm0-7v2h18V6z"
            />
          </svg>
        </button>
        <nav
          aria-label="Primary navigation"
          class="MuiBox-root css-gbul8"
        >
          <a
            aria-current="page"
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorInherit css-1mae5c5-MuiButtonBase-root-MuiButton-root active"
            data-discover="true"
            href="/"
            tabindex="0"
          >
            Albums
          </a>
          <a
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorInherit css-1mae5c5-MuiButtonBase-root-MuiButton-root"
            data-discover="true"
            href="/library"
            tabindex="0"
          >
            Library
          </a>
          <a
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorInherit css-1mae5c5-MuiButtonBase-root-MuiButton-root"
            data-discover="true"
            href="/settings"
            tabindex="0"
          >
            Settings
          </a>
        </nav>
        <div
          class="MuiBox-root css-i9gxme"
        />
        <button
          aria-label="Switch to light theme"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeLarge css-1g3oe0e-MuiButtonBase-root-MuiIconButton-root"
          data-mui-internal-clone-element="true"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
            data-testid="LightModeIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5M2 13h2c.55 0 1-.45 1-1s-.45-1-1-1H2c-.55 0-1 .45-1 1s.45 1 1 1m18 0h2c.55 0 1-.45 1-1s-.45-1-1-1h-2c-.55 0-1 .45-1 1s.45 1 1 1M11 2v2c0 .55.45 1 1 1s1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1m0 18v2c0 .55.45 1 1 1s1-.45 1-1v-2c0-.55-.45-1-1-1s-1 .45-1 1M5.99 4.58c-.39-.39-1.03-.39-1.41 0-.39.39-.39 1.03 0 1.41l1.06 1.06c.39.39 1.03.39 1.41 0s.39-1.03 0-1.41zm12.37 12.37c-.39-.39-1.03-.39-1.41 0-.39.39-.39 1.03 0 1.41l1.06 1.06c.39.39 1.03.39 1.41 0 .39-.39.39-1.03 0-1.41zm1.06-10.96c.39-.39.39-1.03 0-1.41-.39-.39-1.03-.39-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0zM7.05 18.36c.39-.39.39-1.03 0-1.41-.39-.39-1.03-.39-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0z"
            />
          </svg>
        </button>
        <div
          aria-label="Select language"
          class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-2482nm-MuiToggleButtonGroup-root"
          role="group"
        >
          <button
            aria-label="English"
            aria-pressed="true"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-primary MuiToggleButtonGroup-grouped MuiToggleButtonGroup-firstButton css-1xvn2m9-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="0"
            type="button"
            value="en"
          >
            EN
          </button>
          <button
            aria-label="Deutsch"
            aria-pressed="false"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-primary MuiToggleButtonGroup-grouped MuiToggleButtonGroup-lastButton css-1xvn2m9-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="0"
            type="button"
            value="de"
          >
            DE
          </button>
        </div>
      </div>
    </header>
    <nav
      aria-label="Primary navigation"
      class="MuiBox-root css-0"
    />
    <main
      class="MuiBox-root css-15ync0s"
      id="main-content"
      tabindex="-1"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1bmc26r-MuiToolbar-root"
      />
      <div
        data-testid="scan-progress"
      />
      <div
        data-testid="route-content"
      >
        Content
      </div>
    </main>
  </div>
</div>
`;

exports[`AppShell visual regression > matches the shell snapshot in light theme 1`] = `
<div>
  <div
    class="MuiBox-root css-ogmp5q"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ra1c3-MuiTypography-root-MuiLink-root"
      data-testid="skip-to-content"
      href="#main-content"
    >
      Skip to main content
    </a>
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorInherit MuiAppBar-positionFixed mui-fixed css-16zxc7a-MuiPaper-root-MuiAppBar-root"
      style="--Paper-shadow: var(--mui-shadows-0); --Paper-overlay: var(--mui-overlays-0);"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1bmc26r-MuiToolbar-root"
      >
        <a
          aria-label="kbeatz"
          class="MuiBox-root css-5k1n1y"
          data-discover="true"
          href="/"
        >
          <img
            alt=""
            class="MuiBox-root css-1n45nsz"
            src="/src/assets/kbeatz-logo-transparent.svg"
          />
        </a>
        <button
          aria-controls="app-mobile-drawer"
          aria-expanded="false"
          aria-label="Open navigation menu"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeLarge css-k7b2b2-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
            data-testid="MenuIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3zm0-5h18v-2H3zm0-7v2h18V6z"
            />
          </svg>
        </button>
        <nav
          aria-label="Primary navigation"
          class="MuiBox-root css-gbul8"
        >
          <a
            aria-current="page"
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorInherit css-1mae5c5-MuiButtonBase-root-MuiButton-root active"
            data-discover="true"
            href="/"
            tabindex="0"
          >
            Albums
          </a>
          <a
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorInherit css-1mae5c5-MuiButtonBase-root-MuiButton-root"
            data-discover="true"
            href="/library"
            tabindex="0"
          >
            Library
          </a>
          <a
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-sizeMedium MuiButton-colorInherit css-1mae5c5-MuiButtonBase-root-MuiButton-root"
            data-discover="true"
            href="/settings"
            tabindex="0"
          >
            Settings
          </a>
        </nav>
        <div
          class="MuiBox-root css-i9gxme"
        />
        <button
          aria-label="Switch to dark theme"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeLarge css-1g3oe0e-MuiButtonBase-root-MuiIconButton-root"
          data-mui-internal-clone-element="true"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
            data-testid="DarkModeIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 3c-4.97 0-9 4.03-9 9s4.03 9 9 9 9-4.03 9-9c0-.46-.04-.92-.1-1.36-.98 1.37-2.58 2.26-4.4 2.26-2.98 0-5.4-2.42-5.4-5.4 0-1.81.89-3.42 2.26-4.4-.44-.06-.9-.1-1.36-.1"
            />
          </svg>
        </button>
        <div
          aria-label="Select language"
          class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-2482nm-MuiToggleButtonGroup-root"
          role="group"
        >
          <button
            aria-label="English"
            aria-pressed="true"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-primary MuiToggleButtonGroup-grouped MuiToggleButtonGroup-firstButton css-1xvn2m9-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="0"
            type="button"
            value="en"
          >
            EN
          </button>
          <button
            aria-label="Deutsch"
            aria-pressed="false"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-primary MuiToggleButtonGroup-grouped MuiToggleButtonGroup-lastButton css-1xvn2m9-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="0"
            type="button"
            value="de"
          >
            DE
          </button>
        </div>
      </div>
    </header>
    <nav
      aria-label="Primary navigation"
      class="MuiBox-root css-0"
    />
    <main
      class="MuiBox-root css-15ync0s"
      id="main-content"
      tabindex="-1"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1bmc26r-MuiToolbar-root"
      />
      <div
        data-testid="scan-progress"
      />
      <div
        data-testid="route-content"
      >
        Content
      </div>
    </main>
  </div>
</div>
`;
